// ACME Facility Incident Management - PostgreSQL schema
// Docs: https://dbml.dbdiagram.io/docs
//
// This file is the diagram source. The executable schema is
// backend/api/db/init/01_schema.sql plus the additive files
// 03_assignment_requests.sql and 04_rooms_and_user_locations.sql, which
// additionally enforce:
//   - composite foreign keys for floor-in-building and seat-on-floor, on both
//     incidents and users (the user's workplace)
//   - CHECKs that a floor needs a building and a seat needs a floor (users)
//   - seats.kind limited to 'desk' or 'room'
//   - is_escalated as a generated column derived from escalation_status
//   - assignee_id pointing at engineer_profiles, so only engineers hold tickets
//   - CHECK constraints for blocked_reason, escalation_reason and email domain
// DBML cannot express any of those.
//
// Rules kept in the API rather than the database:
//   - a user's seat must be a desk (rooms are chosen only on incident reports)
//   - an engineer profile outlives a demotion (incidents still point at it);
//     only users whose role is engineer count as engineers

Enum user_role {
  employee
  admin
  engineer
}

Enum incident_status {
  open
  in_progress
  blocked
  resolved
  closed
}

Enum incident_priority {
  low
  medium
  high
  critical
}

Enum category_type {
  facility
  technology
}

Enum escalation_state {
  not_requested
  requested
  approved
  rejected
}

Enum incident_event_type {
  created
  updated
  assigned
  status_changed
  priority_changed
  escalation_requested
  escalation_decided
  note_added
}

Table users {
  id bigint [pk, increment]
  email varchar [not null, unique, note: 'Lowercase; employees must use @acme.inc']
  password_hash varchar [not null, note: 'Never returned by the API']
  full_name varchar [not null]
  role user_role [not null, default: 'employee']
  is_active boolean [not null, default: true]

  building_id bigint [note: 'Workplace, chosen at registration; optional']
  floor_id bigint [note: 'Must belong to building_id']
  seat_id bigint [note: 'A desk on floor_id; null for no fixed desk']

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    role [note: 'Partial: active users only']
  }
}

Table engineer_profiles {
  user_id bigint [pk, note: 'One profile per engineer user']
  specialization_id bigint [note: 'Main category the engineer handles']
  is_available boolean [not null, default: true]
  max_active_tickets integer [not null, default: 5]
  phone varchar
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table buildings {
  id bigint [pk, increment]
  name varchar [not null, unique]
  code varchar [not null, unique, note: 'Short code, e.g. HQ1']
  address varchar
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
}

Table floors {
  id bigint [pk, increment]
  building_id bigint [not null]
  level integer [not null, note: 'e.g. 0 = ground floor']
  label varchar [note: 'Display name, e.g. Ground Floor']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (building_id, level) [unique]
  }
}

Table seats {
  id bigint [pk, increment]
  floor_id bigint [not null]
  code varchar [not null, note: 'Desk code (e.g. HQ1-2F-A01, upper-cased) or room name (e.g. Condor)']
  kind varchar [not null, default: 'desk', note: "'desk' or 'room' (CHECK). A room is a seat, so incidents can point at it"]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (floor_id, code) [unique]
  }
}

Table categories {
  id bigint [pk, increment]
  label varchar [not null, unique, note: 'e.g. HVAC, Lighting, Wi-Fi, Printer']
  category_type category_type [not null]
  is_active boolean [not null, default: true]
}

Table incidents {
  id bigint [pk, increment]
  title varchar [not null]
  description text [not null]
  category_id bigint [not null]
  priority incident_priority [not null, default: 'medium']
  status incident_status [not null, default: 'open']

  building_id bigint [not null]
  floor_id bigint [note: 'Optional; must belong to building_id']
  seat_id bigint [note: 'Optional; must belong to floor_id']

  reporter_id bigint [not null]
  assignee_id bigint [note: 'Engineer user; null until assigned']

  is_escalated boolean [not null, note: 'Generated: escalation_status = approved']
  escalation_status escalation_state [not null, default: 'not_requested']
  escalation_reason text
  blocked_reason text [note: 'Required when status is blocked']
  duplicate_of_id bigint [note: 'Set when closed as a duplicate']

  created_at timestamptz [not null, default: `now()`]
  assigned_at timestamptz
  acknowledged_at timestamptz [note: 'First move to in_progress']
  resolved_at timestamptz
  closed_at timestamptz
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    status
    priority
    category_id
    reporter_id
    (assignee_id, status)
    (building_id, floor_id, seat_id)
    created_at
    created_at [type: brin, name: 'incidents_created_at_brin_idx', note: 'Date-range filters; added by 07_incidents_created_at_brin.sql']
  }
}

Table incident_notes {
  id bigint [pk, increment]
  incident_id bigint [not null]
  author_id bigint [not null]
  body text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (incident_id, created_at)
  }
}

Table incident_events {
  id bigint [pk, increment]
  incident_id bigint [not null]
  actor_id bigint
  event_type incident_event_type [not null]
  from_value varchar [note: 'e.g. previous status or priority']
  to_value varchar [note: 'e.g. new status or priority']
  reason text
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (incident_id, created_at)
    event_type
  }
}

Table incident_assignment_requests {
  id bigint [pk, increment]
  incident_id bigint [not null]
  engineer_id bigint [not null, note: 'Only engineers can ask: references engineer_profiles']
  note text [note: 'Optional message to the admin; up to 500 characters (CHECK)']
  created_at timestamptz [not null, default: `now()`]

  Note: 'An engineer asking for an open, unassigned incident. Pending while the row exists: withdrawing, declining or assigning the incident deletes it.'

  indexes {
    (incident_id, engineer_id) [unique]
    engineer_id
  }
}

// Relationships
Ref: users.id - engineer_profiles.user_id [delete: cascade]
Ref: engineer_profiles.specialization_id > categories.id [delete: set null]

Ref: floors.building_id > buildings.id [delete: restrict]
Ref: seats.floor_id > floors.id [delete: restrict]

Ref: incidents.category_id > categories.id [delete: restrict]
Ref: incidents.building_id > buildings.id [delete: restrict]
Ref: incidents.floor_id > floors.id [delete: restrict]
Ref: incidents.seat_id > seats.id [delete: restrict]
Ref: incidents.reporter_id > users.id [delete: restrict]
Ref: incidents.assignee_id > engineer_profiles.user_id [delete: set null]
Ref: incidents.duplicate_of_id > incidents.id [delete: set null]

Ref: incident_notes.incident_id > incidents.id [delete: cascade]
Ref: incident_notes.author_id > users.id [delete: restrict]

Ref: incident_events.incident_id > incidents.id [delete: cascade]
Ref: incident_events.actor_id > users.id [delete: set null]

Ref: users.building_id > buildings.id [delete: no action]
Ref: users.floor_id > floors.id [delete: no action]
Ref: users.seat_id > seats.id [delete: no action]

Ref: incident_assignment_requests.incident_id > incidents.id [delete: cascade]
Ref: incident_assignment_requests.engineer_id > engineer_profiles.user_id [delete: cascade]
